force-app/main/default/objects/RecursosProduto__c/RecursosProduto__c.object-meta.xml
<CustomObject>
    <label>Recursos do Produto</label>
    <nameField>
        <label>Recursos do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recursos do Produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>