force-app/main/default/objects/RecursosProduto__c/fields/Agrupador__c.field-meta.xml
<CustomField>
    <fullName>Agrupador__c</fullName>
    <formula>TEXT(EstruturaProduto__r.Agrupador__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupador</label>
    <type>Text</type>
</CustomField>