force-app/main/default/objects/RecursosProduto__c/fields/EstruturaProduto__c.field-meta.xml
<CustomField>
    <fullName>EstruturaProduto__c</fullName>
    <label>Estrutura de Produto</label>
    <referenceTo>EstruturaProduto__c</referenceTo>
    <relationshipLabel>Recursos do Produto</relationshipLabel>
    <relationshipName>RecursosProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>