force-app/main/default/objects/RecursosProduto__c/fields/Sequencial__c.field-meta.xml
<CustomField>
    <fullName>Sequencial__c</fullName>
    <label>Sequencial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>