force-app/main/default/objects/RecursosProduto__c/validationRules/ValidaSequencial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaSequencial</fullName>
    <active>true</active>
    <description>Valida o sequencial para ser sempre maior do que 0</description>
    <errorConditionFormula>Sequencial__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Sequencial__c</errorDisplayField>
    <errorMessage>Não é possivel preencher um sequencial menor igual a 0</errorMessage>
</ValidationRule>